force-app/main/default/objects/sf_devops__Stage_Assignment__c/sf_devops__Stage_Assignment__c.object-meta.xml
<CustomObject>
    <label>Stage Assignment</label>
    <nameField>
        <label>Stage Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>