force-app/main/default/objects/sf_devops__Stage_Assignment__c/fields/sf_devops__Action__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Action__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id, &apos;View&apos; , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>