force-app/main/default/objects/sf_devops__Stage_Assignment__c/fields/sf_devops__Event__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sf_devops__Events</valueSetName>
    </valueSet>
</CustomField>