force-app/main/default/objects/sf_devops__Stage_Assignment__c/fields/sf_devops__Last_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Execution_Status__c</fullName>
    <label>Execution Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>