force-app/main/default/objects/sf_devops__Stage_Assignment__c/fields/sf_devops__Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Run_Status__c</fullName>
    <label>Last Run Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>