force-app/main/default/objects/sf_devops__Stage_Assignment__c/fields/sf_devops__Name__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Name__c</fullName>
    <formula>sf_devops__Project__r.Name &amp;
IF(
    ISBLANK(sf_devops__Pipeline_Stage__c),
    IF(
        NOT(ISPICKVAL(sf_devops__Event__c, &apos;Review&apos;)),
        &apos; - To be deleted&apos;,
        &apos; - 1. Work Item : Review&apos;
    ),
    &apos; - &apos; &amp; TEXT(sf_devops__Stage_Id__c) &amp; &apos;. &apos; &amp; sf_devops__Pipeline_Stage__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Stage</label>
    <type>Text</type>
</CustomField>