force-app/main/default/objects/sf_devops__Stage_Assignment__c/fields/sf_devops__Quality_Gate_Rule_count__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Quality_Gate_Rule_count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Quality Gate Rules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>