force-app/main/default/objects/sf_devops__Stage_Assignment__c/fields/sf_devops__Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Stage_Id__c</fullName>
    <label>Stage Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>