force-app/main/default/objects/sf_devops__Stage_Assignment__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>sf_devops__Name__c</columns>
    <columns>sf_devops__Action__c</columns>
    <columns>sf_devops__Project__c</columns>
    <columns>sf_devops__Test_Suites_count__c</columns>
    <columns>sf_devops__Quality_Gate_Rule_count__c</columns>
    <columns>sf_devops__Last_Execution_Status__c</columns>
    <columns>sf_devops__Last_Execution_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>